Add self-contained Windows installer